# Restaurant-service

./: Dockerfile  README.md  database.py  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml
api/: dish.py  menu.py  submenu.py
app/: Dockerfile  DockerfileCelery  README.md  database.py  main.py  pyproject.toml  redis_connection.py
app/api/: dish.py  menu.py  menu_to_file.py  submenu.py
app/models/: models.py
app/repositories/: dishRepository.py  menuRepository.py  repositoryCache.py  submenuRepository.py
app/schemas/: schemas.py
app/services/: dishService.py  menuService.py  menu_to_file_service.py  submenuService.py
app/tasks/: menuWriter.py  tasks.py
models/: models.py
repositories/: dishRepository.py  menuRepository.py  submenuRepository.py
schemas/: schemas.py
services/: menuService.py  submenuService.py
tests/: Dockerfile  conftest.py  pyproject.toml  test_1_menu.py  test_2_submenu.py  test_3_dish.py  test_4_dish_and_submenu_counts.py
