[tool.poetry]
name = "y-lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "y_lab"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
SQLAlchemy = "^2.0.19"
psycopg2 = "^2.9.6"
pydantic = "^2.1.1"
pydantic-core = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
