[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["George Ustyanchik <ghkro123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.19"}
pydantic = "^2.1.1"
pydantic-core = "^2.4.0"
redis = "^4.6.0"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
