[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["George Ustyanchik <ghkro123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
pytest = "^7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
